WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
263903
REGRESSION(
267648@main
): It broke layout on <
http://developer.apple.com|developer.apple.com
>
https://bugs.webkit.org/show_bug.cgi?id=263903
Summary
REGRESSION(267648@main): It broke layout on <http://developer.apple.com|devel...
WebKit Commit Bot
Reported
2023-10-30 10:40:40 PDT
https://commits.webkit.org/267648@main
introduced a regression: It broke layout on <
http://developer.apple.com|developer.apple.com
> This is an automatic bug report generated by webkitbot. If this bug report was created because of a flaky test, please file a bug for the flaky test (if we don't already have one on file) and dup this bug against that bug so that we can track how often these flaky tests fail.
Attachments
REVERT of 267648@main
(5.17 KB, patch)
2023-10-30 10:40 PDT
,
WebKit Commit Bot
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
WebKit Commit Bot
Comment 1
2023-10-30 10:40:47 PDT
Created
attachment 468410
[details]
REVERT of
267648@main
Any committer can land this patch automatically by marking it commit-queue+. The commit-queue will build and test the patch before landing to ensure that the revert will be successful. This process takes approximately 15 minutes. If you would like to land the revert faster, you can use the following command: webkit-patch land-attachment ATTACHMENT_ID where ATTACHMENT_ID is the ID of this attachment.
EWS
Comment 2
2023-10-30 12:43:13 PDT
Committed
269969@main
(35f7267afeb8): <
https://commits.webkit.org/269969@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 468410
[details]
.
Radar WebKit Bug Importer
Comment 3
2023-10-30 12:44:15 PDT
<
rdar://problem/117700627
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug