Cherry-pick 35f7267afeb8. rdar://116206382

Unreviewed, reverting 267648@main.
    https://bugs.webkit.org/show_bug.cgi?id=263903

    It broke layout on <http://developer.apple.com|developer.apple.com>

    Reverted changeset:

    "To avoid circular dependency, use the intrinsic size of replaced element as width"
    https://bugs.webkit.org/show_bug.cgi?id=261154
    https://commits.webkit.org/267648@main

    Canonical link: https://commits.webkit.org/269969@main

Identifier: 267815.501@safari-7617-branch